# kr_docs

./: README.md  hardware.rst
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/references/: common_issues.rst  contribute.rst  env_setup.rst  git_workflow.rst  hardware.rst  ide_setup.rst  suggested_reading.rst
docs/source/references/hardware/: hardware.rst  harware_old.rst
docs/source/references/hardware/computation/: computation.rst  nuc.rst  odroid.rst  pixhawk.md
docs/source/references/hardware/motion_capture/: motion_capture.rst
docs/source/references/hardware/network/: bullet_setup.rst  chrony.md  network.rst  network_setup.rst
docs/source/references/hardware/network/wifi_test/: data_20141217.yaml  plot_data.py  wifi_test.rst
docs/source/references/hardware/robot/: robot.rst
docs/source/references/hardware/sensor/: sensor.rst
docs/source/references/hardware/thrust_stand/: thrust_stand.rst
docs/source/references/software/: cpp_style.rst  git_workflow.rst  latex.rst  software.rst
docs/source/references/software/cpp/: cpp.rst  cpp_ide.rst  modern_cpp.rst
docs/source/references/software/ros/: arch_source.rst  catkin.rst  drivers.rst  noetic-desktop-full.patch  ros.rst  ros_node.rst
docs/source/references/software/ros/ros_node/: CMakeLists.txt  package.xml
docs/source/references/software/test/: test.rst
thrust_stand/: thrust_stand.rst
