<?xml version="1.0"?>
<!-- use catkin package format 2 -->
<package format="2">
    <name>ros_node</name>
    <version>0.0.0</version>
    <description>The ros_node package</description>

    <maintainer email="quchao@seas.upenn.edu">chao</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>

    <export>
    </export>
</package>
